# trading-bot

./: .coveragerc  .dockerignore  .env.example  .gitignore  ADVANCED_FEATURES.md  AGENTS.md  AGENT_REPORT.md  BACKTEST_RESULTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_ADVANCED.md  DOCKER.md  DOCKER_CICD_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PAPER_TRADING_GUIDE.md  PAPER_TRADING_STATUS.md  QUICKSTART.md  README.md  SECURITY.md  SESSION_SUMMARY_2025-11-10.md  SETUP.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_SUCCESS_SUMMARY.md  TODO.md  backtest_all_strategies.py  backtest_report_2024.md  check_positions.py  config.py  coverage.xml  docker-compose.yml  incident_contacts.py  incident_response_automation.py  live_trader.py  main.py  monitor_bot.py  ops_metrics_push.py  pyproject.toml  (+16 more)
brokers/: __init__.py  alpaca_broker.py  backtest_broker.py  broker_interface.py  ib_broker.py  multi_broker.py  options_broker.py  order_builder.py
data/: README.md  __init__.py  alt_data_types.py  alternative_data_provider.py  cross_asset_provider.py  cross_asset_types.py  feature_store.py  order_flow_analyzer.py  point_in_time.py  social_sentiment_advanced.py  tick_data.py  web_scraper.py
docs/: BUG_FIXES_2025-11-08.md  CICD.md  CLAUDE_ADVANCED.md  COMPLIANCE_GOVERNANCE.md  DASHBOARD_GUIDE.md  FILE_STRUCTURE.md  INCIDENT_ESCALATION_ROSTER.md  INCIDENT_RESPONSE_OWNERSHIP.md  KELLY_CRITERION_INTEGRATION.md  KELLY_SESSION_2025-11-08.md  LOW_HARDWARE_PROFILE.md  MULTI_AGENT_EXECUTION_PLAN.md  MULTI_TIMEFRAME_INTEGRATION_2025-11-08.md  OPERATIONS_RUNBOOK.md  PAPER_TRADING_GUIDE.md  PHASE_2_COMPLETION_2025-11-08.md  PHASE_3_ENHANCEMENTS.md  PRODUCTION_READINESS.md  PROFITABILITY_RESEARCH.md  QUANT_TRADING_RESEARCH_2025-11-08.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_2026-02-22.md  RUNBOOK.md  RUNTIME_ARCHITECTURE.md  SECRETS_ROTATION_INVENTORY.json  SESSION_2025-11-08_SUMMARY.md  SESSION_SUMMARY_2025-11-08_STREAK_AND_RESEARCH.md  SETUP.md  STATUS.md  TESTING.md  advanced_orders_guide.md  architecture.md  installation.md  strategy_guide.md
engine/: __init__.py  backtest_engine.py  backtest_order_gateway.py  factor_attribution.py  parameter_stability.py  performance_metrics.py  statistical_testing.py  statistical_tests.py  strategy_evaluator.py  strategy_manager.py  validated_backtest.py  walk_forward.py
examples/: check_env.py  dashboard_demo.py  ensemble_strategy_example.py  extended_hours_trading_example.py  kelly_criterion_example.py  live_trading.py  lstm_prediction_example.py  ml_prediction_example.py  multi_timeframe_strategy_example.py  options_strategy_example.py  pairs_trading_example.py  portfolio_rebalancing_example.py  run_streaming.py  short_selling_strategy_example.py  smoke_test.py  strategy_demo.py  streaming_strategy_example.py  test_advanced_orders.py
execution/: __init__.py  advanced_algos.py  low_latency.py  smart_order_router.py
factors/: __init__.py  base_factor.py  earnings_factor.py  factor_orthogonalization.py  factor_portfolio.py  growth_factor.py  ic_tracker.py  momentum_factor.py  quality_factor.py  reversal_factor.py  sentiment_factor.py  value_factor.py  volatility_factor.py
infra/: README.md
llm/: __init__.py  llm_client.py  llm_types.py
ml/: __init__.py  ensemble_predictor.py  feature_importance.py  hyperparameter_optimizer.py  lstm_predictor.py  ml_pipeline.py  rl_agent.py  torch_utils.py
research/: README.md  __init__.py  research_registry.py
results/: backtest_report_2024.md  can_this_beat_qqq.md  etf_baseline_2020-2024.json  etf_baseline_2020-2024.md  honest_backtest_2020-2024.json  honest_backtest_2020-2024.md  where_we_landed.md
scripts/: README.md  chaos_drill.py  check_positions.py  dashboard.py  deploy_canary.py  deployment_preflight.py  enhanced_dashboard.py  export_ops_metrics.py  fault_injection_matrix.py  feature_comparison_backtest.py  generate_validation_artifacts.py  go_live_precheck.sh  governance_gate.py  incident_ack.py  incident_response_automation.py  kill_switch.py  mcp.json  mcp_server.py  mock_strategies.py  monitor_bot.py  ops_status_report.py  paper_burn_in_scorecard.py  run.py  (+23 more)
(+476 files in other folders)
